# GPT5Test

./: .gitignore  README.md  package.json
ai-news-digest/: .eslintrc.json  README.md  package.json
ai-news-digest/src/: email.ts  index.ts  rank.ts  sources.ts  summarize.ts  types.ts
nextjs/: README.md  eslint.config.mjs  package.json  tsconfig.json
nextjs/src/app/: page.tsx
node-ts/: .eslintrc.json  README.md  package.json
node-ts/src/: index.ts
node-ts/test/: greet.test.ts
python/: README.md  pyproject.toml
python/tests/: test_greet.py
vite-react-ts/: README.md  index.html  package.json
vite-react-ts/src/: main.tsx
