[project]
name = "gpt5test-python"
version = "0.1.0"
description = "Python sample project"
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "GPT5Test" }]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
